syntax = "proto3";

option go_package = "github.com/bsv-blockchain/teranode/errors";

package errors;

message TError {
  ERR code = 1;
  string message = 2;
  bytes data = 3;
  TError wrappedError = 4;
  string file = 5;
  int32 line = 6;
  string function = 7;
}

enum ERR {
  // General errors 0-9
  UNKNOWN = 0;
  INVALID_ARGUMENT = 1;
  THRESHOLD_EXCEEDED = 2;
  NOT_FOUND = 3;
  PROCESSING = 4;
  CONFIGURATION = 5;
  CONTEXT = 6;
  CONTEXT_CANCELED = 7;
  EXTERNAL = 8;
  ERROR = 9;
  // Block errors 10-19
  BLOCK_NOT_FOUND=10;
  BLOCK_INVALID=11;
  BLOCK_EXISTS=12;
  BLOCK_INVALID_FORMAT=13;
  BLOCK_PARENT_NOT_MINED=14;
  BLOCK_COINBASE_MISSING_HEIGHT=15;
  BLOCK_ASSEMBLY_RESET=16;
  BLOCK_ERROR=19;
  // Subtree errors 20-29
  SUBTREE_NOT_FOUND=20;
  SUBTREE_INVALID=21;
  SUBTREE_SERIALIZE_ERROR=22;
  SUBTREE_DESERIALIZE_ERROR=23;
  SUBTREE_INVALID_FORMAT=24;
  SUBTREE_EXISTS=25;
  SUBTREE_ERROR=29;
  // Transaction errors 30-49
  TX_NOT_FOUND=30;
  TX_INVALID=31;
  TX_INVALID_DOUBLE_SPEND=32;
  TX_EXISTS=33;
  TX_MISSING_PARENT=34;
  TX_LOCK_TIME=35;
  TX_CONFLICTING=36;
  TX_LOCKED=37;
  TX_COINBASE_IMMATURE=38;
  TX_POLICY=39;
  TX_CONSENSUS=40;
  TX_CREATING=41;
  TX_ERROR=49;
  // Service errors 50-59
  SERVICE_UNAVAILABLE=50;
  SERVICE_NOT_STARTED=51;
  SERVICE_ERROR=59;
  // Storage errors 60-69
  STORAGE_UNAVAILABLE=60;
  STORAGE_NOT_STARTED=61;
  STORAGE_ERROR=69;
  // UTXO errors 70-79
  UTXO_SPENT=70;
  UTXO_NON_FINAL=71;
  UTXO_FROZEN=72;
  UTXO_NOT_FOUND=73;
  UTXO_MISMATCH=74;
  UTXO_INVALID_SIZE=75;
  UTXO_ERROR=79;
  // Kafka errors 80-89
  KAFKA_DECODE_ERROR=80;
  KAFKA_ERROR=89;
  // Blob errors 90-99
  BLOB_EXISTS=90;
  BLOB_NOT_FOUND=91;
  BLOB_FOOTER_SIZE_MISMATCH=92;
  BLOB_ERROR=99;
  // State errors 100-109
  STATE_INITIALIZATION=100;
  CATCHUP_IN_PROGRESS=101;
  STATE_ERROR=109;
  // Network errors 110-119
  NETWORK_ERROR=110;
  INVALID_SUBNET=111;
  INVALID_IP=112;
  NETWORK_TIMEOUT=113;
  NETWORK_CONNECTION_REFUSED=114;
  NETWORK_INVALID_RESPONSE=115;
  NETWORK_PEER_MALICIOUS=116;
}
